--- a/assets/home.css
+++ b/assets/home.css
@@ -131,7 +131,8 @@
 .logo { font-size: 24px; font-weight: bold; margin-right: 50px; }
 
 .menu-item {
-  color: #ccc;
+  font-size: 20px;
+  color: #000;
   text-decoration: none;
   margin-right: 20px;
   cursor: pointer;
@@ -139,6 +140,7 @@
 
 /* .menu-item.active { color: white; border-bottom: 2px solid white; } */
 .menu-item.active {
+  font-size: 24px;
   color: #fff !important;
   border-bottom: 2px solid #fff;
   font-weight: bold;
