--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,14 @@
+
+<!-- 文章标题 -->
+<h1>{{ page.title }}</h1>
+
+<!-- 发布日期 -->
+<p><small>{{ page.date | date: "%Y-%m-%d" }}</small></p>
+
+<!-- Markdown内容 -->
+{{ content }}
+
+<!-- 按钮 -->
 <div class="post-nav-buttons">
   <a href="javascript:history.back();" class="nav-btn">
     <span class="icon">⬅</span> 返回
